# lpp

./: CMakeLists.txt  LICENSE  README.md
inc/lpp/: lpp.h
src/: main.cpp
test/: header.inc.lpp  samples.inc.lpp  test.lpp
